CSS Classes optimization

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
                 </ul>
                 <div class="navbar__button button"><span class="button__text">Get started</span></div>
             </div>
-            <div class="hero__title">A Digital Product Design Agency</div>
-            <div class="hero__subtitle">We are Creative and Professional Digital Agency</div>
+            <div class="hero__title"><span class="hero__main-title">A Digital Product Design Agency</span></div>
+            <div class="hero__subtitle"><span class="hero__main-subtitle">We are Creative and Professional Digital
+                    Agency</span></div>
             <div class="hero_button button"><span class="button__text">Get started</span></div>
 
 
@@ -38,63 +39,99 @@
         <div class="bg what-you-get__bg">
             <div class="container">
                 <div class="title"><span class="title__green">features</span></div>
-                <div class="what-you-get__subtitle"><span class="subtitle__black">We are here to help you with</span>
+                <div class="what-you-get__subtitle">
+                    <span class="subtitle__black">We are here to help you with</span>
                 </div>
                 <div class="what-you-get__cards">
                     <div class="what-you-get_cards-card card">
-                        <div class="card__icon" style="background-color: #FFE7DB;"><img class="card__icon-pic"
-                                src="img/what-you-get/grow.svg">
+                        <div class="card__icon" style="background-color: #FFE7DB;">
+                            <img class="card__icon-pic" src="img/what-you-get/grow.svg">
                         </div>
-                        <div class="card__title">Grow your business</div>
-                        <div class="card__text">The magic wand for success is in figuring out how to bring in the
-                            profits
-                            and
-                            ensure the capacity needed to sustain that growth for posterity.</div>
+                        <div class="card__title">
+                            <span class="card__title-text">Grow your business</span>
+                        </div>
+                        <div class="card__desc">
+                            <span class="card__desc-text">The magic wand for success is in figuring
+                                out how to bring in the
+                                profits
+                                and
+                                ensure the capacity needed to sustain that growth for posterity.</span>
+                        </div>
                     </div>
                     <div class="what-you-get_cards-card card">
                         <div class="card__icon" style="background-color: #E7F2EF;"><img class="card__icon-pic"
                                 src="img/what-you-get/sales.svg"></div>
-                        <div class="card__title">Drive more sales</div>
-                        <div class="card__text">A potential customer, once lost, is hard to retain back. But keeping
-                            some
-                            critical factors in mind, we can, for sure, use these loyalty programs as customer retention
-                            tools.
+                        <div class="card__title">
+                            <span class="card__title-text">Drive more sales</span>
+                        </div>
+                        <div class="card__desc">
+                            <span class="card__desc-text">A potential customer, once lost, is hard
+                                to retain back. But keeping
+                                some
+                                critical factors in mind, we can, for sure, use these loyalty programs as customer
+                                retention
+                                tools.
+                            </span>
                         </div>
                     </div>
                     <div class="what-you-get_cards-card card">
-                        <div class="card__icon" style="background-color: #FAF3D8;"><img class="card__icon-pic"
-                                src="img/what-you-get/expert.svg"></div>
-                        <div class="card__title">Handle by Expert</div>
-                        <div class="card__text">We know how we candevelop deep, trust-based relationships with our
-                            clients,
-                            and
-                            work together more collaboratively</div>
+                        <div class="card__icon" style="background-color: #FAF3D8;">
+                            <img class="card__icon-pic" src="img/what-you-get/expert.svg">
+                        </div>
+                        <div class="card__title">
+                            <span class="card__title-text">Handle by Expert</span>
+                        </div>
+                        <div class="card__desc">
+                            <span class="card__desc-text">We know how we candevelop deep,
+                                trust-based relationships with our
+                                clients,
+                                and
+                                work together more collaboratively</div>
+                        </span>
                     </div>
 
                     <div class="what-you-get_cards-card card">
                         <div class="card__icon" style="background-color: #C0F2EF;"><img class="card__icon-pic"
-                                src="img/what-you-get/ux.svg"></div>
-                        <div class="card__title">UX Research</div>
-                        <div class="card__text">UX research is the systematic study of target users and their
-                            requirements,
-                            to
-                            add realistic contexts and insights to design processes.</div>
+                                src="img/what-you-get/ux.svg">
+                        </div>
+                        <div class="card__title">
+                            <span class="card__title-text">UX Research</span>
+                        </div>
+                        <div class="card__desc">
+                            <span class="card__desc-text">UX research is the systematic study of
+                                target users and their
+                                requirements,
+                                to
+                                add realistic contexts and insights to design processes.</span>
+                        </div>
                     </div>
                     <div class="what-you-get_cards-card card">
-                        <div class="card__icon" style="background-color: #EDE7F2;"><img class="card__icon-pic"
-                                src="img/what-you-get/audit.svg"></div>
-                        <div class="card__title">Business Audit</div>
-                        <div class="card__text">An audit examines your business's financial records to verify they are
-                            accurate.
-                            This is done through a systematic review of your transactions. </div>
+                        <div class="card__icon" style="background-color: #EDE7F2;">
+                            <img class="card__icon-pic" src="img/what-you-get/audit.svg">
+                        </div>
+                        <div class="card__title">
+                            <span class="card__title-text">Business Audit</span>
+                        </div>
+                        <div class="card__desc">
+                            <span class="card__desc-text">An audit examines your business's
+                                financial records to verify they are
+                                accurate.
+                                This is done through a systematic review of your transactions.</span>
+                        </div>
                     </div>
                     <div class="what-you-get_cards-card card">
-                        <div class="card__icon" style="background-color: #D8F0FA;"><img class="card__icon-pic"
-                                src="img/what-you-get/data.svg"></div>
-                        <div class="card__title">Data tracking</div>
-                        <div class="card__text">The hardware and software, which when used together allows you to know
-                            where
-                            something is at any point in time</div>
+                        <div class="card__icon" style="background-color: #D8F0FA;">
+                            <img class="card__icon-pic" src="img/what-you-get/data.svg">
+                        </div>
+                        <div class="card__title">
+                            <span class="card__title-text">Data tracking</span>
+                        </div>
+                        <div class="card__desc">
+                            <span class="card__desc-text">The hardware and software, which when used
+                                together allows you to know
+                                where
+                                something is at any point in time</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -104,11 +141,18 @@
     <div class="our-process">
         <div class="bg our-process__bg">
             <div class="container">
-                <div class="title title__center"> <span class="title__white">how it works</span></div>
-                <div class="our-process__subtitle"><span class="subtitle__white">Our Process</span></div>
-                <div class="our-process__subtext">We know the best solution for all of your business ideas and we can
-                    help
-                    you solve all business problems</div>
+                <div class="title title__center">
+                    <span class="title__white">how it works</span>
+                </div>
+                <div class="our-process__subtitle">
+                    <span class="subtitle__white">Our Process</span>
+                </div>
+                <div class="our-process__desc">
+                    <span class="our-process__desc-text">We know the best solution for all of
+                        your business ideas and we can
+                        help
+                        you solve all business problems</span>
+                </div>
                 <div class="our-process__cards">
                     <div class="our-process__card">
                         <div class="our-process__card-image">
@@ -116,12 +160,18 @@
                                 src="img/our-process/graphs/bussines-audit-graph.png">
                         </div>
                         <div class="our-process__card-text">
-                            <div class="our-process__card-icon" style="background-color: #DAE6FF;"><img
-                                    class="our-process__card-svg" src="img/our-process/icons/business-audit-icon.svg">
+                            <div class="our-process__card-icon" style="background-color: #DAE6FF;">
+                                <img class="our-process__card-svg" src="img/our-process/icons/business-audit-icon.svg">
                             </div>
-                            <div class="our-process__card-title">Business Audit</div>
-                            <div class="our-process__card-desc">An audit examines your business's financial records to
-                                verify they are accurate. This is done through a systematic review of your transactions.
+                            <div class="our-process__card-title">
+                                <span class="our-process__card-title-text">Business
+                                    Audit</span>
+                            </div>
+                            <div class="our-process__card-desc">
+                                <span class="our-process__card-desc-text">An audit
+                                    examines your business's financial records to
+                                    verify they are accurate. This is done through a systematic review of your
+                                    transactions.</span>
                             </div>
                         </div>
                     </div>
@@ -131,13 +181,16 @@
                                 src="img/our-process/graphs/data-tracking-graph.png">
                         </div>
                         <div class="our-process__card-text">
-                            <div class="our-process__card-icon" style="background-color: #E9E5FF;"><img
-                                    class="our-process__card-svg" src="img/our-process/icons/data-tracking-icon.svg">
+                            <div class="our-process__card-icon" style="background-color: #E9E5FF;">
+                                <img class="our-process__card-svg" src="img/our-process/icons/data-tracking-icon.svg">
                             </div>
-                            <div class="our-process__card-title">Data tracking</div>
-                            <div class="our-process__card-desc">The hardware and software, which when used together
-                                allows
-                                you to know where something is at any point in time</div>
+                            <div class="our-process__card-title">
+                                <span class="our-process__card-title-text">Data tracking</span>
+                            </div>
+                            <div class="our-process__card-desc">
+                                <span class="our-process__card-desc-text">The hardware and software, which when used
+                                    together allows you to know where something is at any point in time</span>
+                            </div>
                         </div>
                     </div>
                     <div class="our-process__card">
@@ -147,9 +200,13 @@
                         <div class="our-process__card-text">
                             <div class="our-process__card-icon" style="background-color: #CEEDFF"><img
                                     class="our-process__card-svg" src="img/our-process/icons/results-icon.svg"></div>
-                            <div class="our-process__card-title">Results</div>
-                            <div class="our-process__card-desc">An audit examines your business's financial records to
-                                verify they are accurate. This is done through a systematic review of your transactions.
+                            <div class="our-process__card-title">
+                                <span class="our-process__card-title-text">Results</span>
+                            </div>
+                            <div class="our-process__card-desc">
+                                <span class="our-process__card-desc-text">An audit examines your business's financial
+                                    records to verify they are accurate. This is done through a systematic review of
+                                    your transactions.</span>
                             </div>
                         </div>
                     </div>
@@ -160,9 +217,13 @@
 
     <div class="brands">
         <div class="container">
-            <div class="title"><span class="title__green">brands</span></div>
-            <div class="brands__subtitle"><span class="subtitle__black">We work with thousands of the world’s leading
-                    brands</span></div>
+            <div class="title">
+                <span class="title__green">brands</span>
+            </div>
+            <div class="brands__subtitle">
+                <span class="subtitle__black">We work with thousands of the world’s leading
+                    brands</span>
+            </div>
             <div class="brands__logos">
                 <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/01-mazda.svg"></div>
                 <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/02-atlassian.svg"></div>
@@ -175,7 +236,9 @@
                 <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/09-talentbin.svg"></div>
                 <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/10-civicrm.svg"></div>
             </div>
-            <div class="brands__footer-text">You're going to be in good company. We work with world's leading brands.
+            <div class="brands__footer">
+                <span class="brands__footer-text">You're going to be in good company. We work with world's leading
+                    brands.</span>
             </div>
         </div>
     </div>
@@ -184,13 +247,19 @@
         <div class="container">
             <div class="start-working__left-right">
                 <div class="start-working__left">
-                    <div class="title"><span class="title__white">start with us</span></div>
-                    <div class="start-working__subtitle">Start working faster today</div>
-                    <div class="start-working__desc">We know the best solution for all of your business ideas and we can
-                        help
-                        you
-                        solve all business problems</div>
-                    <div class="button"><span class="button__text">Get started</span></div>
+                    <div class="title">
+                        <span class="title__white">start with us</span>
+                    </div>
+                    <div class="start-working__subtitle">
+                        <span class="subtitle__white">Start working faster today</span>
+                    </div>
+                    <div class="start-working__desc">
+                        <span class="start-working__desc-text">We know the best solution for all of your business ideas
+                            and we can help you solve all business problems</span>
+                    </div>
+                    <div class="button">
+                        <span class="button__text">Get started</span>
+                    </div>
                 </div>
                 <div class="start-working__right">
                     <div class="start-working__chart">
@@ -226,7 +295,9 @@
                 </div>
             </div>
             <div class="footer__credentials">
-                <div class="footer_copyright">© 2021 Company</div>
+                <div class="footer_copyright">
+                    <span class="footer_copyright-text">© 2021 Company</span>
+                </div>
                 <div class="footer__privacy-links">
                     <a href=# class="footer__privacy-link">Privacy policy</a>
                     <a href=# class="footer__privacy-link">Term of service</a>
