--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
 
         </div>
-        <div class="hero__image-block"><img class="hero__image" src="img/hero/hero-main.png"></div>
-
+        <div class="container">
+            <div class="hero__image-block"><img class="hero__image" src="img/hero/hero-main.png"></div>
+        </div>
     </div>
 
     <div class="what-you-get">
