--- a/index.html
+++ b/index.html
@@ -44,54 +44,56 @@
         </div>
     </div>
 
-    <div class="what-you-get">
-        <div class="bg what-you-get__bg">
+    <div class="what_you_get">
+        <div class="bg what_you_get__bg">
             <div class="container">
                 <div class="title"><span class="title__green">features</span></div>
-                <div class="what-you-get__subtitle">
+                <div class="what_you_get__subtitle">
                     <span class="subtitle__black">We are here to help you with</span>
                 </div>
-                <div class="what-you-get__cards">
-                    <div class="what-you-get_cards-card card">
+                <div class="what_you_get_cards">
+                    <div class="what_you_get_cards__card">
                         <div class="card__icon" style="background-color: #FFE7DB;">
-                            <img class="card__icon-pic" src="img/what-you-get/grow.svg">
+                            <img class="card__icon_pic" src="img/what_you_get/grow.svg">
                         </div>
                         <div class="card__title">
-                            <span class="card__title-text">Grow your business</span>
+                            <span class="card__title_text">Grow your business</span>
                         </div>
                         <div class="card__desc">
-                            <span class="card__desc-text">The magic wand for success is in figuring
+                            <span class="card__desc_text"><span class="bold">The magic wand</span> for
+                                success is in figuring
                                 out how to bring in the
                                 profits
                                 and
                                 ensure the capacity needed to sustain that growth for posterity.</span>
                         </div>
                     </div>
-                    <div class="what-you-get_cards-card card">
-                        <div class="card__icon" style="background-color: #E7F2EF;"><img class="card__icon-pic"
-                                src="img/what-you-get/sales.svg"></div>
+                    <div class="what_you_get_cards__card">
+                        <div class="card__icon" style="background-color: #E7F2EF;"><img class="card__icon_pic"
+                                src="img/what_you_get/sales.svg"></div>
                         <div class="card__title">
-                            <span class="card__title-text">Drive more sales</span>
+                            <span class="card__title_text">Drive more sales</span>
                         </div>
                         <div class="card__desc">
-                            <span class="card__desc-text">A potential customer, once lost, is hard
-                                to retain back. But keeping
-                                some
-                                critical factors in mind, we can, for sure, use these loyalty programs as customer
+                            <span class="card__desc_text">A potential customer, once lost, is hard
+                                to retain back. But <span class="bold">keeping
+                                    some
+                                    critical</span> factors in mind, we can, for sure, use these loyalty programs as
+                                customer
                                 retention
                                 tools.
                             </span>
                         </div>
                     </div>
-                    <div class="what-you-get_cards-card card">
+                    <div class="what_you_get_cards__card">
                         <div class="card__icon" style="background-color: #FAF3D8;">
-                            <img class="card__icon-pic" src="img/what-you-get/expert.svg">
+                            <img class="card__icon_pic" src="img/what_you_get/expert.svg">
                         </div>
                         <div class="card__title">
-                            <span class="card__title-text">Handle by Expert</span>
+                            <span class="card__title_text">Handle by Expert</span>
                         </div>
                         <div class="card__desc">
-                            <span class="card__desc-text">We know how we candevelop deep,
+                            <span class="card__desc_text">We know how we candevelop deep,
                                 trust-based relationships with our
                                 clients,
                                 and
@@ -99,44 +101,44 @@
                         </span>
                     </div>
 
-                    <div class="what-you-get_cards-card card">
-                        <div class="card__icon" style="background-color: #C0F2EF;"><img class="card__icon-pic"
-                                src="img/what-you-get/ux.svg">
+                    <div class="what_you_get_cards__card">
+                        <div class="card__icon" style="background-color: #C0F2EF;"><img class="card__icon_pic"
+                                src="img/what_you_get/ux.svg">
                         </div>
                         <div class="card__title">
-                            <span class="card__title-text">UX Research</span>
+                            <span class="card__title_text">UX Research</span>
                         </div>
                         <div class="card__desc">
-                            <span class="card__desc-text">UX research is the systematic study of
+                            <span class="card__desc_text">UX research is the systematic study of
                                 target users and their
                                 requirements,
                                 to
                                 add realistic contexts and insights to design processes.</span>
                         </div>
                     </div>
-                    <div class="what-you-get_cards-card card">
+                    <div class="what_you_get_cards__card">
                         <div class="card__icon" style="background-color: #EDE7F2;">
-                            <img class="card__icon-pic" src="img/what-you-get/audit.svg">
+                            <img class="card__icon_pic" src="img/what_you_get/audit.svg">
                         </div>
                         <div class="card__title">
-                            <span class="card__title-text">Business Audit</span>
+                            <span class="card__title_text">Business Audit</span>
                         </div>
                         <div class="card__desc">
-                            <span class="card__desc-text">An audit examines your business's
+                            <span class="card__desc_text">An audit examines your business's
                                 financial records to verify they are
                                 accurate.
                                 This is done through a systematic review of your transactions.</span>
                         </div>
                     </div>
-                    <div class="what-you-get_cards-card card">
+                    <div class="what_you_get_cards__card">
                         <div class="card__icon" style="background-color: #D8F0FA;">
-                            <img class="card__icon-pic" src="img/what-you-get/data.svg">
+                            <img class="card__icon_pic" src="img/what_you_get/data.svg">
                         </div>
                         <div class="card__title">
-                            <span class="card__title-text">Data tracking</span>
+                            <span class="card__title_text">Data tracking</span>
                         </div>
                         <div class="card__desc">
-                            <span class="card__desc-text">The hardware and software, which when used
+                            <span class="card__desc_text">The hardware and software, which when used
                                 together allows you to know
                                 where
                                 something is at any point in time</span>
@@ -147,73 +149,73 @@
         </div>
     </div>
 
-    <div class="our-process">
-        <div class="bg our-process__bg">
+    <div class="our_process">
+        <div class="bg our_process__bg">
             <div class="container">
                 <div class="title title__center">
                     <span class="title__white">how it works</span>
                 </div>
-                <div class="our-process__subtitle">
+                <div class="our_process__subtitle">
                     <span class="subtitle__white">Our Process</span>
                 </div>
-                <div class="our-process__desc">
-                    <span class="our-process__desc-text">We know the best solution for all of
+                <div class="our_process__desc">
+                    <span class="our_process__desc_text">We know the best solution for all of
                         your business ideas and we can
                         help
                         you solve all business problems</span>
                 </div>
-                <div class="our-process__cards">
-                    <div class="our-process__card">
-                        <div class="our-process__card-image">
-                            <img class="our-process__card-image_pic"
-                                src="img/our-process/graphs/bussines-audit-graph.png">
+                <div class="our_process__cards">
+                    <div class="our_process__card">
+                        <div class="our_process__card_image">
+                            <img class="our_process__card_image_pic"
+                                src="img/our_process/graphs/bussines-audit-graph.png">
                         </div>
-                        <div class="our-process__card-text">
-                            <div class="our-process__card-icon" style="background-color: #DAE6FF;">
-                                <img class="our-process__card-svg" src="img/our-process/icons/business-audit-icon.svg">
+                        <div class="our_process__card_text">
+                            <div class="our_process__card_icon" style="background-color: #DAE6FF;">
+                                <img class="our_process__card-svg" src="img/our_process/icons/business-audit-icon.svg">
                             </div>
-                            <div class="our-process__card-title">
-                                <span class="our-process__card-title-text">Business
+                            <div class="our_process__card_title">
+                                <span class="our_process__card_title_text">Business
                                     Audit</span>
                             </div>
-                            <div class="our-process__card-desc">
-                                <span class="our-process__card-desc-text">An audit
+                            <div class="our_process__card-desc">
+                                <span class="our_process__card_desc_text">An audit
                                     examines your business's financial records to
                                     verify they are accurate. This is done through a systematic review of your
                                     transactions.</span>
                             </div>
                         </div>
                     </div>
-                    <div class="our-process__card">
-                        <div class="our-process__card-image">
-                            <img class="our-process__card-image_pic"
-                                src="img/our-process/graphs/data-tracking-graph.png">
+                    <div class="our_process__card">
+                        <div class="our_process__card_image">
+                            <img class="our_process__card_image_pic"
+                                src="img/our_process/graphs/data-tracking-graph.png">
                         </div>
-                        <div class="our-process__card-text">
-                            <div class="our-process__card-icon" style="background-color: #E9E5FF;">
-                                <img class="our-process__card-svg" src="img/our-process/icons/data-tracking-icon.svg">
+                        <div class="our_process__card_text">
+                            <div class="our_process__card_icon" style="background-color: #E9E5FF;">
+                                <img class="our_process__card-svg" src="img/our_process/icons/data-tracking-icon.svg">
                             </div>
-                            <div class="our-process__card-title">
-                                <span class="our-process__card-title-text">Data tracking</span>
+                            <div class="our_process__card_title">
+                                <span class="our_process__card_title_text">Data tracking</span>
                             </div>
-                            <div class="our-process__card-desc">
-                                <span class="our-process__card-desc-text">The hardware and software, which when used
+                            <div class="our_process__card-desc">
+                                <span class="our_process__card_desc_text">The hardware and software, which when used
                                     together allows you to know where something is at any point in time</span>
                             </div>
                         </div>
                     </div>
-                    <div class="our-process__card">
-                        <div class="our-process__card-image">
-                            <img class="our-process__card-image_pic" src="img/our-process/graphs/results-graph.png">
+                    <div class="our_process__card">
+                        <div class="our_process__card_image">
+                            <img class="our_process__card_image_pic" src="img/our_process/graphs/results-graph.png">
                         </div>
-                        <div class="our-process__card-text">
-                            <div class="our-process__card-icon" style="background-color: #CEEDFF"><img
-                                    class="our-process__card-svg" src="img/our-process/icons/results-icon.svg"></div>
-                            <div class="our-process__card-title">
-                                <span class="our-process__card-title-text">Results</span>
+                        <div class="our_process__card_text">
+                            <div class="our_process__card_icon" style="background-color: #CEEDFF"><img
+                                    class="our_process__card-svg" src="img/our_process/icons/results-icon.svg"></div>
+                            <div class="our_process__card_title">
+                                <span class="our_process__card_title_text">Results</span>
                             </div>
-                            <div class="our-process__card-desc">
-                                <span class="our-process__card-desc-text">An audit examines your business's financial
+                            <div class="our_process__card-desc">
+                                <span class="our_process__card_desc_text">An audit examines your business's financial
                                     records to verify they are accurate. This is done through a systematic review of
                                     your transactions.</span>
                             </div>
@@ -263,7 +265,7 @@
                         <span class="subtitle__white">Start working faster today</span>
                     </div>
                     <div class="start-working__desc">
-                        <span class="start-working__desc-text">We know the best solution for all of your business ideas
+                        <span class="start-working__desc_text">We know the best solution for all of your business ideas
                             and we can help you solve all business problems</span>
                     </div>
                     <div class="button">
